--- a/src/components/purchases/PurchaseList.css
+++ b/src/components/purchases/PurchaseList.css
@@ -1,6 +1,6 @@
-/* .purchase {
+.purchase {
     border: 1px dotted blue;
     margin: 1rem;
     padding: 1rem;
     background-color: aliceblue;
-} */
+} 
